[datatable] fix mobile en wrappant les enregistrements

--- a/app/Resources/public/less/components.less
+++ b/app/Resources/public/less/components.less
@@ -16,6 +16,10 @@ body.modal-open {
         color: black !important;
 }
 
+div.dataTables_info {
+    white-space: normal;
+}
+
 .dataTable {
     img, > img {
         max-height: 4em;
